# aveas_openlabel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-docs.yml  pypi-publish.yml  python-package.yml  static.yml
aveas_openlabel/: __init__.py  attribute_enforcer.py  aveas_openlabel.py  event.py  frame.py  metadata.py  utils.py
aveas_openlabel/attributes/: __init__.py  dimension.py  general.py  hmi_feedback.py  impact.py  interior.py  lights.py  open_drive.py  operator.py  road.py  summary.py  traffic.py
aveas_openlabel/classifications/: __init__.py  animal.py  bicycle.py  bus.py  car.py  human_pedestrian.py  mobility_device.py  motorcycle.py  other_classification.py  pushable_pullable.py  railvehicle.py  trailer.py  truck.py  van.py
aveas_openlabel/contexts/: __init__.py  environment_context.py  environment_context_data.py  scenario_context.py  scenario_context_data.py
aveas_openlabel/object_data/: __init__.py  all.py  unattached.py  unsteerable.py  unsteerable_non_operator.py  unsteerable_unattached.py  unsteerable_unattached_non_operator.py
aveas_openlabel/object_in_frame_data/: __init__.py  all.py  no_rider.py  non_vehicle.py  non_vehicle_non_operator.py  passive_vehicle_non_operator.py  unsteerable.py
pydoctor_templates/: extra.css
test_aveas_openlabel/: __init__.py  minimum_openlabel_example.json  test_attribute_enforcer.py  test_aveas_openlabel.py  test_documentation.py  test_example.py  test_utils.py
test_aveas_openlabel/test_attributes/: test_general.py
